[tool.poetry]
name = "flask_example"
version = "0.1.0"
description = ""
authors = ["Zephir F <zephirfournier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
safety = "^1.10.3"
bandit = "^1.7.4"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
